--- a/test_app2.ipynb
+++ b/test_app2.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "31ef3bc0",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 38,
    "id": "64e382be",
    "metadata": {},
    "outputs": [],
@@ -45,7 +45,7 @@
     "\n",
     "for i, item in enumerate(questions_data):\n",
     "\n",
-    "    process = [13]\n",
+    "    process = [11]\n",
     "    if i not in process:\n",
     "        continue\n",
     "\n",
@@ -55,17 +55,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 42,
+   "id": "97b18495",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'f918266a-b3e0-4914-865d-4faa564f1aef'"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "task_id"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
    "id": "5076d2ac",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"Hi, I was out sick from my classes on Friday, so I'm trying to figure out what I need to study for my Calculus mid-term next week. My friend from class sent me an audio recording of Professor Willowbrook giving out the recommended reading for the test, but my headphones are broken :(\\n\\nCould you please listen to the recording for me and tell me the page numbers I'm supposed to go over? I've attached a file called Homework.mp3 that has the recording. Please provide just the page numbers as a comma-delimited list. And please provide the list in ascending order.\""
+       "'What is the final numeric output from the attached Python code?'"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -76,7 +97,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
+   "id": "87b70abf",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "c3d1d2be",
    "metadata": {},
    "outputs": [],
@@ -130,7 +159,7 @@
     "    print(f\"Running agent on {len(questions_data)} questions...\")\n",
     "    for i, item in enumerate(questions_data):\n",
     "\n",
-    "        process = [13]\n",
+    "        process = [11]\n",
     "        if i not in process:\n",
     "            continue\n",
     "\n",
@@ -203,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 4,
    "id": "2d2800d9",
    "metadata": {},
    "outputs": [
@@ -215,24 +244,24 @@
       "Fetching questions from: https://agents-course-unit4-scoring.hf.space/questions\n",
       "Fetched 20 questions.\n",
       "Running agent on 20 questions...\n",
-      "Downloaded file for task 1f975693-876d-457b-a649-393859e79bf3 to C:\\Users\\ANDREA~1.GIO\\AppData\\Local\\Temp\\tmpn7a3k53q\\1f975693-876d-457b-a649-393859e79bf3.mp3\n"
+      "Downloaded file for task f918266a-b3e0-4914-865d-4faa564f1aef to C:\\Users\\ANDREA~1.GIO\\AppData\\Local\\Temp\\tmp1qjn3jhf\\f918266a-b3e0-4914-865d-4faa564f1aef.py\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[{'Task ID': '1f975693-876d-457b-a649-393859e79bf3',\n",
-       "  'Question': \"Hi, I was out sick from my classes on Friday, so I'm trying to figure out what I need to study for my Calculus mid-term next week. My friend from class sent me an audio recording of Professor Willowbrook giving out the recommended reading for the test, but my headphones are broken :(\\n\\nCould you please listen to the recording for me and tell me the page numbers I'm supposed to go over? I've attached a file called Homework.mp3 that has the recording. Please provide just the page numbers as a comma-delimited list. And please provide the list in ascending order.\",\n",
-       "  'Submitted Answer': {'messages': [HumanMessage(content=\"Hi, I was out sick from my classes on Friday, so I'm trying to figure out what I need to study for my Calculus mid-term next week. My friend from class sent me an audio recording of Professor Willowbrook giving out the recommended reading for the test, but my headphones are broken :(\\n\\nCould you please listen to the recording for me and tell me the page numbers I'm supposed to go over? I've attached a file called Homework.mp3 that has the recording. Please provide just the page numbers as a comma-delimited list. And please provide the list in ascending order.\", additional_kwargs={}, response_metadata={}, id='d3783293-cd5d-4c09-a3cf-e75a966f02a9'),\n",
-       "    SystemMessage(content='File path provided: C:\\\\Users\\\\ANDREA~1.GIO\\\\AppData\\\\Local\\\\Temp\\\\tmpn7a3k53q\\\\1f975693-876d-457b-a649-393859e79bf3.mp3', additional_kwargs={}, response_metadata={}, id='ddb142ff-f32b-4097-a378-6169b5515ffc'),\n",
-       "    AIMessage(content='', additional_kwargs={'tool_calls': [{'id': 'call_XGiU0i4Rz0MuAO9wEtZeRu5j', 'function': {'arguments': '{\"audio_path\":\"C:\\\\\\\\Users\\\\\\\\ANDREA~1.GIO\\\\\\\\AppData\\\\\\\\Local\\\\\\\\Temp\\\\\\\\tmpn7a3k53q\\\\\\\\1f975693-876d-457b-a649-393859e79bf3.mp3\"}', 'name': 'audio-transcriber'}, 'type': 'function'}], 'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 64, 'prompt_tokens': 500, 'total_tokens': 564, 'completion_tokens_details': {'accepted_prediction_tokens': 0, 'audio_tokens': 0, 'reasoning_tokens': 0, 'rejected_prediction_tokens': 0}, 'prompt_tokens_details': {'audio_tokens': 0, 'cached_tokens': 0}}, 'model_name': 'gpt-4o-2024-11-20', 'system_fingerprint': 'fp_ee1d74bde0', 'id': 'chatcmpl-CGISCs9DiCf5UJmEh2doQtepBaZdg', 'service_tier': None, 'prompt_filter_results': [{'prompt_index': 0, 'content_filter_results': {'hate': {'filtered': False, 'severity': 'safe'}, 'jailbreak': {'filtered': False, 'detected': False}, 'self_harm': {'filtered': False, 'severity': 'safe'}, 'sexual': {'filtered': False, 'severity': 'safe'}, 'violence': {'filtered': False, 'severity': 'safe'}}}], 'finish_reason': 'tool_calls', 'logprobs': None, 'content_filter_results': {}}, id='run--e5ebc307-99f5-47b8-8024-80e115513513-0', tool_calls=[{'name': 'audio-transcriber', 'args': {'audio_path': 'C:\\\\Users\\\\ANDREA~1.GIO\\\\AppData\\\\Local\\\\Temp\\\\tmpn7a3k53q\\\\1f975693-876d-457b-a649-393859e79bf3.mp3'}, 'id': 'call_XGiU0i4Rz0MuAO9wEtZeRu5j', 'type': 'tool_call'}], usage_metadata={'input_tokens': 500, 'output_tokens': 64, 'total_tokens': 564, 'input_token_details': {'audio': 0, 'cache_read': 0}, 'output_token_details': {'audio': 0, 'reasoning': 0}}),\n",
-       "    ToolMessage(content='Transcription(text=\"Before you all go, I want to remind you that the midterm is next week. Here\\'s a little hint. You should be familiar with the differential equations on page 245. Problems that are very similar to problems 32, 33 and 44 from that page might be on the test, and also some of you might want to brush up on the last page in the integration section, page 197. I know some of you struggled on last week\\'s quiz. I foresee problem 22 from page 197 being on your midterm. Oh, and don\\'t forget to brush up on the section on related rates on pages 132, 133 and 134.\", logprobs=None, usage=None)', name='audio-transcriber', id='9c51ff74-7b74-4737-abda-76e4392761e0', tool_call_id='call_XGiU0i4Rz0MuAO9wEtZeRu5j'),\n",
-       "    SystemMessage(content='File path provided: C:\\\\Users\\\\ANDREA~1.GIO\\\\AppData\\\\Local\\\\Temp\\\\tmpn7a3k53q\\\\1f975693-876d-457b-a649-393859e79bf3.mp3', additional_kwargs={}, response_metadata={}, id='9b898c81-a735-460d-ae95-eafb149b846f'),\n",
-       "    AIMessage(content='132,133,134,197,245', additional_kwargs={'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 11, 'prompt_tokens': 773, 'total_tokens': 784, 'completion_tokens_details': {'accepted_prediction_tokens': 0, 'audio_tokens': 0, 'reasoning_tokens': 0, 'rejected_prediction_tokens': 0}, 'prompt_tokens_details': {'audio_tokens': 0, 'cached_tokens': 0}}, 'model_name': 'gpt-4o-2024-11-20', 'system_fingerprint': 'fp_ee1d74bde0', 'id': 'chatcmpl-CGISIEPpGfou4mkqp4KlYvhwsm2me', 'service_tier': None, 'prompt_filter_results': [{'prompt_index': 0, 'content_filter_results': {'hate': {'filtered': False, 'severity': 'safe'}, 'jailbreak': {'filtered': False, 'detected': False}, 'self_harm': {'filtered': False, 'severity': 'safe'}, 'sexual': {'filtered': False, 'severity': 'safe'}, 'violence': {'filtered': False, 'severity': 'safe'}}}], 'finish_reason': 'stop', 'logprobs': None, 'content_filter_results': {'hate': {'filtered': False, 'severity': 'safe'}, 'protected_material_code': {'filtered': False, 'detected': False}, 'protected_material_text': {'filtered': False, 'detected': False}, 'self_harm': {'filtered': False, 'severity': 'safe'}, 'sexual': {'filtered': False, 'severity': 'safe'}, 'violence': {'filtered': False, 'severity': 'safe'}}}, id='run--691d3a38-23be-4f38-9c6d-a5ee182f3c63-0', usage_metadata={'input_tokens': 773, 'output_tokens': 11, 'total_tokens': 784, 'input_token_details': {'audio': 0, 'cache_read': 0}, 'output_token_details': {'audio': 0, 'reasoning': 0}})],\n",
-       "   'file_path': 'C:\\\\Users\\\\ANDREA~1.GIO\\\\AppData\\\\Local\\\\Temp\\\\tmpn7a3k53q\\\\1f975693-876d-457b-a649-393859e79bf3.mp3'}}]"
+       "[{'Task ID': 'f918266a-b3e0-4914-865d-4faa564f1aef',\n",
+       "  'Question': 'What is the final numeric output from the attached Python code?',\n",
+       "  'Submitted Answer': {'messages': [HumanMessage(content='What is the final numeric output from the attached Python code?', additional_kwargs={}, response_metadata={}, id='a6678c53-d33c-4b9b-8755-dda03d677ffe'),\n",
+       "    SystemMessage(content='File path provided: C:\\\\Users\\\\ANDREA~1.GIO\\\\AppData\\\\Local\\\\Temp\\\\tmp1qjn3jhf\\\\f918266a-b3e0-4914-865d-4faa564f1aef.py', additional_kwargs={}, response_metadata={}, id='96e9d09b-83fc-4b4b-af72-358ac7e82595'),\n",
+       "    AIMessage(content='', additional_kwargs={'tool_calls': [{'id': 'call_jdSq4awjVLISHfg2M2fVgKZK', 'function': {'arguments': '{\"script_path\":\"C:\\\\\\\\Users\\\\\\\\ANDREA~1.GIO\\\\\\\\AppData\\\\\\\\Local\\\\\\\\Temp\\\\\\\\tmp1qjn3jhf\\\\\\\\f918266a-b3e0-4914-865d-4faa564f1aef.py\"}', 'name': 'python-script-opener'}, 'type': 'function'}], 'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 66, 'prompt_tokens': 433, 'total_tokens': 499, 'completion_tokens_details': {'accepted_prediction_tokens': 0, 'audio_tokens': 0, 'reasoning_tokens': 0, 'rejected_prediction_tokens': 0}, 'prompt_tokens_details': {'audio_tokens': 0, 'cached_tokens': 0}}, 'model_name': 'gpt-4o-2024-11-20', 'system_fingerprint': 'fp_ee1d74bde0', 'id': 'chatcmpl-CGJMmujqOyiKEnsTG6vRoJgX7ze2l', 'service_tier': None, 'prompt_filter_results': [{'prompt_index': 0, 'content_filter_results': {'hate': {'filtered': False, 'severity': 'safe'}, 'jailbreak': {'filtered': False, 'detected': False}, 'self_harm': {'filtered': False, 'severity': 'safe'}, 'sexual': {'filtered': False, 'severity': 'safe'}, 'violence': {'filtered': False, 'severity': 'safe'}}}], 'finish_reason': 'tool_calls', 'logprobs': None, 'content_filter_results': {}}, id='run--dd84559c-e402-4e89-a930-7d5d724cec33-0', tool_calls=[{'name': 'python-script-opener', 'args': {'script_path': 'C:\\\\Users\\\\ANDREA~1.GIO\\\\AppData\\\\Local\\\\Temp\\\\tmp1qjn3jhf\\\\f918266a-b3e0-4914-865d-4faa564f1aef.py'}, 'id': 'call_jdSq4awjVLISHfg2M2fVgKZK', 'type': 'tool_call'}], usage_metadata={'input_tokens': 433, 'output_tokens': 66, 'total_tokens': 499, 'input_token_details': {'audio': 0, 'cache_read': 0}, 'output_token_details': {'audio': 0, 'reasoning': 0}}),\n",
+       "    ToolMessage(content='from random import randint\\nimport time\\n\\nclass UhOh(Exception):\\n    pass\\n\\nclass Hmm:\\n    def __init__(self):\\n        self.value = randint(-100, 100)\\n\\n    def Yeah(self):\\n        if self.value == 0:\\n            return True\\n        else:\\n            raise UhOh()\\n\\ndef Okay():\\n    while True:\\n        yield Hmm()\\n\\ndef keep_trying(go, first_try=True):\\n    maybe = next(go)\\n    try:\\n        if maybe.Yeah():\\n            return maybe.value\\n    except UhOh:\\n        if first_try:\\n            print(\"Working...\")\\n            print(\"Please wait patiently...\")\\n        time.sleep(0.1)\\n        return keep_trying(go, first_try=False)\\n\\nif __name__ == \"__main__\":\\n    go = Okay()\\n    print(f\"{keep_trying(go)}\")\\n', name='python-script-opener', id='8675c9c9-e62c-44ac-b5de-6c71abaeb77b', tool_call_id='call_jdSq4awjVLISHfg2M2fVgKZK'),\n",
+       "    SystemMessage(content='File path provided: C:\\\\Users\\\\ANDREA~1.GIO\\\\AppData\\\\Local\\\\Temp\\\\tmp1qjn3jhf\\\\f918266a-b3e0-4914-865d-4faa564f1aef.py', additional_kwargs={}, response_metadata={}, id='ab11cfe8-faf5-4efa-b27e-005e75e7984a'),\n",
+       "    AIMessage(content='The final numeric output depends on the random value generated by `randint(-100, 100)` in the script. It will be a number between negative one hundred and one hundred, inclusive.', additional_kwargs={'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 41, 'prompt_tokens': 731, 'total_tokens': 772, 'completion_tokens_details': {'accepted_prediction_tokens': 0, 'audio_tokens': 0, 'reasoning_tokens': 0, 'rejected_prediction_tokens': 0}, 'prompt_tokens_details': {'audio_tokens': 0, 'cached_tokens': 0}}, 'model_name': 'gpt-4o-2024-11-20', 'system_fingerprint': 'fp_ee1d74bde0', 'id': 'chatcmpl-CGJMnycl3rGX9qetfOnrpvh2MYnxJ', 'service_tier': None, 'prompt_filter_results': [{'prompt_index': 0, 'content_filter_results': {'hate': {'filtered': False, 'severity': 'safe'}, 'jailbreak': {'filtered': False, 'detected': False}, 'self_harm': {'filtered': False, 'severity': 'safe'}, 'sexual': {'filtered': False, 'severity': 'safe'}, 'violence': {'filtered': False, 'severity': 'safe'}}}], 'finish_reason': 'stop', 'logprobs': None, 'content_filter_results': {'hate': {'filtered': False, 'severity': 'safe'}, 'self_harm': {'filtered': False, 'severity': 'safe'}, 'sexual': {'filtered': False, 'severity': 'safe'}, 'violence': {'filtered': False, 'severity': 'safe'}}}, id='run--f4461940-3ac0-4bab-b413-244d2cf0d503-0', usage_metadata={'input_tokens': 731, 'output_tokens': 41, 'total_tokens': 772, 'input_token_details': {'audio': 0, 'cache_read': 0}, 'output_token_details': {'audio': 0, 'reasoning': 0}})],\n",
+       "   'file_path': 'C:\\\\Users\\\\ANDREA~1.GIO\\\\AppData\\\\Local\\\\Temp\\\\tmp1qjn3jhf\\\\f918266a-b3e0-4914-865d-4faa564f1aef.py'}}]"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
