--- a/tools_test.ipynb
+++ b/tools_test.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "id": "c14296ff",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "4ec297d7",
    "metadata": {},
    "outputs": [],
@@ -275,12 +275,99 @@
    "id": "14ae331c",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "results = tools.python_executor_tool(file_content)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "60bc36b8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "str"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(file_content)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "362e9afd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "from random import randint\n",
+      "import time\n",
+      "\n",
+      "class UhOh(Exception):\n",
+      "    pass\n",
+      "\n",
+      "class Hmm:\n",
+      "    def __init__(self):\n",
+      "        self.value = randint(-100, 100)\n",
+      "\n",
+      "    def Yeah(self):\n",
+      "        if self.value == 0:\n",
+      "            return True\n",
+      "        else:\n",
+      "            raise UhOh()\n",
+      "\n",
+      "def Okay():\n",
+      "    while True:\n",
+      "        yield Hmm()\n",
+      "\n",
+      "def keep_trying(go, first_try=True):\n",
+      "    maybe = next(go)\n",
+      "    try:\n",
+      "        if maybe.Yeah():\n",
+      "            return maybe.value\n",
+      "    except UhOh:\n",
+      "        if first_try:\n",
+      "            print(\"Working...\")\n",
+      "            print(\"Please wait patiently...\")\n",
+      "        time.sleep(0.1)\n",
+      "        return keep_trying(go, first_try=False)\n",
+      "\n",
+      "if __name__ == \"__main__\":\n",
+      "    go = Okay()\n",
+      "    print(f\"{keep_trying(go)}\")\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pathlib import Path\n",
+    "\n",
+    "file_content = Path('f918266a-b3e0-4914-865d-4faa564f1aef.py').read_text()\n",
+    "print(file_content)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ce68ec3d",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv (3.13.6)",
+   "display_name": ".venv310 (3.10.0)",
    "language": "python",
    "name": "python3"
   },
@@ -294,7 +381,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.6"
+   "version": "3.10.0"
   }
  },
  "nbformat": 4,
